src/test/ui/suggestions/suggest-move-types.stderr
error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:26:19
   |
LL | struct A<T, M: One<A=(), T>> {
   |                   ^----^^-^
   |                    |     |
   |                    |     this generic argument must come before the first constraint
   |                    the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:33:36
   |
LL | struct Al<'a, T, M: OneWithLifetime<A=(), T, 'a>> {
   |                                    ^----^^-^^--^
   |                                     |     |  |
   |                                     |     |  this generic argument must come before the first constraint
   |                                     |     this generic argument must come before the first constraint
   |                                     the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:40:27
   |
LL | struct B<T, U, V, M: Three<A=(), B=(), C=(), T, U, V>> {
   |                           ^----^^^^^^^^^^^^^^-^^-^^-^
   |                            |                 |  |  |
   |                            |                 |  |  this generic argument must come before the first constraint
   |                            |                 |  this generic argument must come before the first constraint
   |                            |                 this generic argument must come before the first constraint
   |                            the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:48:52
   |
LL | struct Bl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<A=(), B=(), C=(), T, U, V, 'a, 'b, 'c>> {
   |                                                    ^----^^^^^^^^^^^^^^-^^-^^-^^--^^--^^--^
   |                                                     |                 |  |  |  |   |   |
   |                                                     |                 |  |  |  |   |   this generic argument must come before the first constraint
   |                                                     |                 |  |  |  |   this generic argument must come before the first constraint
   |                                                     |                 |  |  |  this generic argument must come before the first constraint
   |                                                     |                 |  |  this generic argument must come before the first constraint
   |                                                     |                 |  this generic argument must come before the first constraint
   |                                                     |                 this generic argument must come before the first constraint
   |                                                     the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:57:27
   |
LL | struct C<T, U, V, M: Three<T, A=(), B=(), C=(), U, V>> {
   |                           ^^^^----^^^^^^^^^^^^^^-^^-^
   |                               |                 |  |
   |                               |                 |  this generic argument must come before the first constraint
   |                               |                 this generic argument must come before the first constraint
   |                               the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:65:52
   |
LL | struct Cl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<T, 'a, A=(), B=(), C=(), U, 'b, V, 'c>> {
   |                                                    ^^^^^^^^----^^^^^^^^^^^^^^-^^--^^-^^--^
   |                                                            |                 |  |   |  |
   |                                                            |                 |  |   |  this generic argument must come before the first constraint
   |                                                            |                 |  |   this generic argument must come before the first constraint
   |                                                            |                 |  this generic argument must come before the first constraint
   |                                                            |                 this generic argument must come before the first constraint
   |                                                            the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:74:27
   |
LL | struct D<T, U, V, M: Three<T, A=(), B=(), U, C=(), V>> {
   |                           ^^^^----^^^^^^^^-^^^^^^^^-^
   |                               |           |        |
   |                               |           |        this generic argument must come before the first constraint
   |                               |           this generic argument must come before the first constraint
   |                               the first constraint is provided here

error: constraints in a path segment must come after generic arguments
  --> $DIR/suggest-move-types.rs:82:52
   |
LL | struct Dl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<T, 'a, A=(), B=(), U, 'b, C=(), V, 'c>> {
   |                                                    ^^^^^^^^----^^^^^^^^-^^--^^^^^^^^-^^--^
   |                                                            |           |  |         |  |
   |                                                            |           |  |         |  this generic argument must come before the first constraint
   |                                                            |           |  |         this generic argument must come before the first constraint
   |                                                            |           |  this generic argument must come before the first constraint
   |                                                            |           this generic argument must come before the first constraint
   |                                                            the first constraint is provided here

error[E0747]: type provided when a lifetime was expected
  --> $DIR/suggest-move-types.rs:33:43
   |
LL | struct Al<'a, T, M: OneWithLifetime<A=(), T, 'a>> {
   |                                           ^
   |
   = note: lifetime arguments must be provided before type arguments

error[E0747]: type provided when a lifetime was expected
  --> $DIR/suggest-move-types.rs:48:71
   |
LL | struct Bl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<A=(), B=(), C=(), T, U, V, 'a, 'b, 'c>> {
   |                                                                       ^
   |
   = note: lifetime arguments must be provided before type arguments

error[E0747]: lifetime provided when a type was expected
  --> $DIR/suggest-move-types.rs:65:56
   |
LL | struct Cl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<T, 'a, A=(), B=(), C=(), U, 'b, V, 'c>> {
   |                                                        ^^
   |
   = note: type arguments must be provided before lifetime arguments

error[E0747]: lifetime provided when a type was expected
  --> $DIR/suggest-move-types.rs:82:56
   |
LL | struct Dl<'a, 'b, 'c, T, U, V, M: ThreeWithLifetime<T, 'a, A=(), B=(), U, 'b, C=(), V, 'c>> {
   |                                                        ^^
   |
   = note: type arguments must be provided before lifetime arguments

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0747`.
